// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing <Carousel /> renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View>
          <
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 0,
            "borderWidth": 1,
            "margin": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 95,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            }
          }
          style={
            Object {
              "height": 140,
              "justifyContent": "center",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "black",
                "fontSize": 12,
                "fontWeight": "bold",
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            The Shawshank Redemption
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 0,
            "borderWidth": 1,
            "margin": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 95,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://m.media-amazon.com/images/M/MV5BM2MyNjYxNmUtYTAwNi00MTYxLWJmNWYtYzZlODY3ZTk3OTFlXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            }
          }
          style={
            Object {
              "height": 140,
              "justifyContent": "center",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "black",
                "fontSize": 12,
                "fontWeight": "bold",
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            The Godfather
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 0,
            "borderWidth": 1,
            "margin": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 95,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://m.media-amazon.com/images/M/MV5BMWMwMGQzZTItY2JlNC00OWZiLWIyMDctNDk2ZDQ2YjRjMWQ0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            }
          }
          style={
            Object {
              "height": 140,
              "justifyContent": "center",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "black",
                "fontSize": 12,
                "fontWeight": "bold",
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            The Godfather: Part II
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View>
          <
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`testing <Carousel /> renders rounded cards 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View>
          <
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 10,
            "borderWidth": 1,
            "margin": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 95,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            }
          }
          style={
            Object {
              "height": 140,
              "justifyContent": "center",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "black",
                "fontSize": 12,
                "fontWeight": "bold",
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            The Shawshank Redemption
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 10,
            "borderWidth": 1,
            "margin": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 95,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://m.media-amazon.com/images/M/MV5BM2MyNjYxNmUtYTAwNi00MTYxLWJmNWYtYzZlODY3ZTk3OTFlXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            }
          }
          style={
            Object {
              "height": 140,
              "justifyContent": "center",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "black",
                "fontSize": 12,
                "fontWeight": "bold",
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            The Godfather
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 10,
            "borderWidth": 1,
            "margin": 5,
            "opacity": 1,
            "overflow": "hidden",
            "width": 95,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://m.media-amazon.com/images/M/MV5BMWMwMGQzZTItY2JlNC00OWZiLWIyMDctNDk2ZDQ2YjRjMWQ0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            }
          }
          style={
            Object {
              "height": 140,
              "justifyContent": "center",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "color": "black",
                "fontSize": 12,
                "fontWeight": "bold",
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            The Godfather: Part II
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View>
          <
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`testing <Carousel /> with Enzyme renders different items per page 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="1"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="2"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="3"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="4"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="5"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="6"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="7"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="8"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="9"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="10"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="11"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <ForwardRef
        disabled={true}
        onPress={[Function]}
      >
        <View>
          <Component
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Shawshank Redemption",
          }
        }
        key="0"
      />
    </View>
    <View>
      <ForwardRef
        disabled={false}
        onPress={[Function]}
      >
        <View>
          <Component
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`testing <Carousel /> with Enzyme renders different items per page 2`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="1"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="2"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="3"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="4"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="5"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <ForwardRef
        disabled={true}
        onPress={[Function]}
      >
        <View>
          <Component
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Shawshank Redemption",
          }
        }
        key="0"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BM2MyNjYxNmUtYTAwNi00MTYxLWJmNWYtYzZlODY3ZTk3OTFlXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather",
          }
        }
        key="1"
      />
    </View>
    <View>
      <ForwardRef
        disabled={false}
        onPress={[Function]}
      >
        <View>
          <Component
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`testing <Carousel /> with Enzyme renders different items per page 3`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="1"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="2"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="3"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <ForwardRef
        disabled={true}
        onPress={[Function]}
      >
        <View>
          <Component
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Shawshank Redemption",
          }
        }
        key="0"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BM2MyNjYxNmUtYTAwNi00MTYxLWJmNWYtYzZlODY3ZTk3OTFlXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather",
          }
        }
        key="1"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMWMwMGQzZTItY2JlNC00OWZiLWIyMDctNDk2ZDQ2YjRjMWQ0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather: Part II",
          }
        }
        key="2"
      />
    </View>
    <View>
      <ForwardRef
        disabled={false}
        onPress={[Function]}
      >
        <View>
          <Component
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`testing <Carousel /> with Enzyme renders different items per page 4`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="1"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <ForwardRef
        disabled={true}
        onPress={[Function]}
      >
        <View>
          <Component
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Shawshank Redemption",
          }
        }
        key="0"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BM2MyNjYxNmUtYTAwNi00MTYxLWJmNWYtYzZlODY3ZTk3OTFlXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather",
          }
        }
        key="1"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMWMwMGQzZTItY2JlNC00OWZiLWIyMDctNDk2ZDQ2YjRjMWQ0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather: Part II",
          }
        }
        key="2"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Dark Knight",
          }
        }
        key="3"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMWU4N2FjNzYtNTVkNC00NzQ0LTg0MjAtYTJlMjFhNGUxZDFmXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "12 Angry Men",
          }
        }
        key="4"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BNDE4OTMxMTctNmRhYy00NWE2LTg3YzItYTk3M2UwOTU5Njg4XkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "Schindler's List",
          }
        }
        key="5"
      />
    </View>
    <View>
      <ForwardRef
        disabled={false}
        onPress={[Function]}
      >
        <View>
          <Component
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`testing <Carousel /> with Enzyme renders different items per page 5`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "backgroundColor": "#39CCCC",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
    <View
      key="1"
      style={
        Object {
          "backgroundColor": "grey",
          "borderRadius": 50,
          "height": 10,
          "margin": 10,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View>
      <ForwardRef
        disabled={true}
        onPress={[Function]}
      >
        <View>
          <Component
            color="grey"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f060",
                  "M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z",
                ],
                "iconName": "arrow-left",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMDFkYTc0MGEtZmNhMC00ZDIzLWFmNTEtODM1ZmRlYWMwMWFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Shawshank Redemption",
          }
        }
        key="0"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BM2MyNjYxNmUtYTAwNi00MTYxLWJmNWYtYzZlODY3ZTk3OTFlXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather",
          }
        }
        key="1"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMWMwMGQzZTItY2JlNC00OWZiLWIyMDctNDk2ZDQ2YjRjMWQ0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR3,0,182,268_AL_.jpg",
            "title": "The Godfather: Part II",
          }
        }
        key="2"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Dark Knight",
          }
        }
        key="3"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BMWU4N2FjNzYtNTVkNC00NzQ0LTg0MjAtYTJlMjFhNGUxZDFmXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "12 Angry Men",
          }
        }
        key="4"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BNDE4OTMxMTctNmRhYy00NWE2LTg3YzItYTk3M2UwOTU5Njg4XkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "Schindler's List",
          }
        }
        key="5"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BNzA5ZDNlZWMtM2NhNS00NDJjLTk4NDItYTRmY2EwMWZlMTY3XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UX182_CR0,0,182,268_AL_.jpg",
            "title": "The Lord of the Rings",
          }
        }
        key="6"
      />
      <Card
        cardInfo={
          Object {
            "img": "https://m.media-amazon.com/images/M/MV5BNGNhMDIzZTUtNTBlZi00MTRlLWFjM2ItYzViMjE3YzI5MjljXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UY268_CR1,0,182,268_AL_.jpg",
            "title": "Pulp Fiction",
          }
        }
        key="7"
      />
    </View>
    <View>
      <ForwardRef
        disabled={false}
        onPress={[Function]}
      >
        <View>
          <Component
            color="black"
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f061",
                  "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
                ],
                "iconName": "arrow-right",
                "prefix": "fas",
              }
            }
            size={32}
          />
        </View>
      </ForwardRef>
    </View>
  </View>
</View>
`;
